--- a/downstream/modules/platform/proc-controller-create-container-group.adoc
+++ b/downstream/modules/platform/proc-controller-create-container-group.adoc
@@ -21,7 +21,48 @@ After the service account is created, its credentials are provided to {Controlle
 
 .Procedure
 
-. To create a service account, download and use the sample service account, `containergroup sa` and modify it as needed to obtain the credentials.
+. To create a service account, download and use the sample service account, `containergroup sa` and change it as needed to obtain the credentials:
++
+[literal, options="nowrap" subs="+attributes"]
+----
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: containergroup-service-account
+  namespace: containergroup-namespace
+---
+kind: Role
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: role-containergroup-service-account
+  namespace: containergroup-namespace
+rules:
+- apiGroups: [""]
+  resources: ["pods"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["pods/log"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["pods/attach"]
+  verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: role-containergroup-service-account-binding
+  namespace: containergroup-namespace
+subjects:
+- kind: ServiceAccount
+  name: containergroup-service-account
+  namespace: containergroup-namespace
+roleRef:
+  kind: Role
+  name: role-containergroup-service-account
+  apiGroup: rbac.authorization.k8s.io
+----
++
 . Apply the configuration from `containergroup-sa.yml`:
 +
 [literal, options="nowrap" subs="+attributes"]
