--- a/downstream/assemblies/hub/assembly-populate-container-registry.adoc
+++ b/downstream/assemblies/hub/assembly-populate-container-registry.adoc
@@ -10,12 +10,12 @@ ifdef::context[:parent-context: {context}]
 
 
 [role="_abstract"]
-By default, {PrivateHubName} does not include {ExecEnvShort}s.
-To populate your container registry, you must push a {ExecEnvShort} to it.
+By default, {PrivateHubName} does not include {ExecEnvName}.
+To populate your container registry, you must push an {ExecEnvShort} to it.
 
 You must follow a specific workflow to populate your {PrivateHubName} remote registry:
 
-* Pull {ExecEnvShort}s from the Red Hat Ecosystem Catalog (registry.redhat.io)
+* Pull {ExecEnvName} from the Red Hat Ecosystem Catalog (registry.redhat.io)
 * Tag them
 * Push them to your {PrivateHubName} remote registry
 
@@ -32,7 +32,7 @@ Use the hostnames instead of IP addresses when configuring firewall rules.
 
 After making this change you can continue to pull {ExecEnvShort}s from `registry.redhat.io` and `registry.access.redhat.com`. You do not require a `quay.io` login, or need to interact with the `quay.io` registry directly in any way to continue pulling Red Hat container images.
 
-However, manifests, sometimes called “subscription allocations”, on the web-based Red Hat Subscription Management are no longer supported as of early 2024 with one exception: If a system is part of a closed network or “air gapped” system that does not receive its updates from Red Hat’s servers directly, manifests are supported until the release of Red Hat Satellite 6.16. Keep up to date with link:access.redhat.com/articles/1365633[Red Hat Satellite Release Dates] for the announcement for Red Hat Satellite 6.16's release date announcement.
+However, manifests, sometimes called “subscription allocations”, on the web-based Red Hat Subscription Management are no longer supported as of early 2024 with one exception: If a system is part of a closed network or “air gapped” system that does not receive its updates from Red Hat's servers directly, manifests are supported until the release of Red Hat Satellite 6.16. Keep up to date with link:https://access.redhat.com/articles/1365633[Red Hat Satellite Release Dates] for Red Hat Satellite 6.16's release date announcement.
 ====
 
 include::hub/proc-obtain-images.adoc[leveloffset=+1]
