--- a/downstream/modules/platform/proc-backup-aap-container.adoc
+++ b/downstream/modules/platform/proc-backup-aap-container.adoc
@@ -2,7 +2,7 @@
 
 = Backing up container-based {PlatformNameShort}
 
-Perform a back up of your container-based {PlatformNameShort} installer.
+Perform a back up of your {ContainerBase} of {PlatformNameShort}.
 
 .Procedure
 
@@ -22,4 +22,4 @@ This will backup the important data deployed by the containerized installer such
 
 * Data files
 
-By default, the backup directory is set to `~/backups` but this can be changed by using the `backup_dir` variable in your `inventory` file.
+By default, the backup directory is set to `~/backups`. You can change this by using the `backup_dir` variable in your `inventory` file.
