Add release notes for async 2.5-3 aka event 2
- Added release notes for event 2 `aap-25-3-28-oct.adoc`
- Updated `aap-25-2-14-oct.adoc` and `aap-25-1-7-oct.adoc` to include errata advisories
- Updated `async-updates.adoc` and included in the release notes `master.adoc`

AAP 2.5 (3) Async Release - Update Async Release Notes

https://issues.redhat.com/browse/AAP-33685

--- a/downstream/titles/release-notes/async/aap-25-1-7-oct.adoc
+++ b/downstream/titles/release-notes/async/aap-25-1-7-oct.adoc
@@ -39,10 +39,10 @@ The following enhancements and fixes have been implemented in this release of {P
 == Advisories
 The following errata advisories are included in this release:
 
-* link:https://access.redhat.com/errata/RHBA-2024:7756[RHBA-2024:7756]
+* link:https://access.redhat.com/errata/RHBA-2024:7756[RHBA-2024:7756 - Product Release Update]
 
-* link:https://access.redhat.com/errata/RHBA-2024:7760[RHBA-2024:7760]
+* link:https://access.redhat.com/errata/RHBA-2024:7760[RHBA-2024:7760 - Container Release Update]
 
-* link:https://access.redhat.com/errata/RHBA-2024:7766[RHBA-2024:7766]
+* link:https://access.redhat.com/errata/RHBA-2024:7766[RHBA-2024:7766 - Cluster Scoped Container Release Update]
 
-* link:https://access.redhat.com/errata/RHBA-2024:7810[RHBA-2024:7810]
+* link:https://access.redhat.com/errata/RHBA-2024:7810[RHBA-2024:7810 - Setup Bundle Release Update]
