--- a/downstream/titles/release-notes/async/aap-25-2-14-oct.adoc
+++ b/downstream/titles/release-notes/async/aap-25-2-14-oct.adoc
@@ -26,16 +26,14 @@ The following fixes have been implemented in this release of {PlatformName}.
 
 * Fixed an issue where setting `*pg_host=` without any other context no longer results in an empty HOST section of `settings.py` in controller. (AAP-32440)
 
-// Commenting this out for now as the advisories are not yet published to the Errata tab on the downloads page: https://access.redhat.com/downloads/content/480/ver=2.5/rhel---9/2.5/x86_64/product-errata
+== Advisories
+The following errata advisories are included in this release:
 
-// == Advisories
-// The following errata advisories are included in this release:
+* link:https://access.redhat.com/errata/RHBA-2024:8079[RHBA-2024:8079 - Product Release Update]
 
-// * link:https://access.redhat.com/errata/[]
+* link:https://access.redhat.com/errata/RHBA-2024:8084[RHBA-2024:8084 - Container Release Update]
 
-// * link:https://access.redhat.com/errata/[]
+* link:https://access.redhat.com/errata/RHBA-2024:8096[RHBA-2024:8096 - Cluster Scoped Container Release Update]
 
-// * link:https://access.redhat.com/errata/[]
-
-// * link:https://access.redhat.com/errata/[]
+* link:https://access.redhat.com/errata/RHBA-2024:8141[RHBA-2024:8141 - Setup Bundle Release Update]
 
