--- a/downstream/titles/release-notes/master.adoc
+++ b/downstream/titles/release-notes/master.adoc
@@ -27,6 +27,11 @@ include::topics/aap-25-fixed-issues.adoc[leveloffset=+1]
 
 include::topics/docs-25.adoc[leveloffset=+1]
 
-include::async/aap-25-2-14-oct.adoc[leveloffset=+1]
-
-include::async/aap-25-1-7-oct.adoc[leveloffset=+1]
+// == Asynchronous updates
+include::async/async-updates.adoc[leveloffset=+1]
+// Async release 2.5-3 (AKA event 2) 28th Oct 
+include::async/aap-25-3-28-oct.adoc[leveloffset=+2]
+// Async release 2.5-2 14th Oct
+include::async/aap-25-2-14-oct.adoc[leveloffset=+2]
+//Async release 2.5-1 7th Oct
+include::async/aap-25-1-7-oct.adoc[leveloffset=+2]
