Fixes broken xrefs in RPM upgrade and migration guide

--- a/downstream/modules/platform/con-aap-upgrades.adoc
+++ b/downstream/modules/platform/con-aap-upgrades.adoc
@@ -12,4 +12,4 @@ Upgrading {PlatformNameShort} {PlatformVers}  involves downloading the installat
 // [hherbly]: not sure we need the addt'l resources block? the xref goes to the next section of the document.
 [role="_additional-resources"]
 .Additional resources
-* xref:platform/assembly-aap-upgrading-platform[Upgrading to {PlatformName} {PlatformVers}]
+* xref:aap-upgrading-platform[Upgrading to {PlatformName} {PlatformVers}] 
