--- a/downstream/modules/platform/proc-running-setup-script-for-updates.adoc
+++ b/downstream/modules/platform/proc-running-setup-script-for-updates.adoc
@@ -13,4 +13,8 @@ You can run the setup script once you have finished updating the `inventory` fil
 $ ./setup.sh
 -----
 
-The installation will begin.
+The installation will begin. 
+
+[role="_additional-resources"]
+.Next steps
+If you are upgrading from {PlatformNameShort} 2.4 to 2.5, proceed to xref:account-linking_aap-upgrading-platform[Account linking] to link your existing service level accounts to the single unified platform account. 
