--- a/downstream/modules/platform/proc-choosing-obtaining-installer.adoc
+++ b/downstream/modules/platform/proc-choosing-obtaining-installer.adoc
@@ -1,6 +1,6 @@
 
 
-// [id="proc-choosing-obtaining-installer_{context}"]
+[id="proc-choosing-obtaining-installer_{context}"]
 
 
 = Choosing and obtaining a {PlatformName} installer
